--- a/accueil/sass/accueil.css
+++ b/accueil/sass/accueil.css
@@ -349,6 +349,71 @@ template {
   margin: 0;
 }
 
+.loader {
+  position: fixed;
+  inset: 0;
+  display: grid;
+  place-items: center;
+  background-color: #f6f6f6;
+  opacity: 0.95;
+  z-index: 10;
+  height: 100vh;
+  animation: load 1s;
+  animation-fill-mode: forwards;
+  animation-delay: 3s;
+  transform-origin: bottom;
+}
+.loader::after {
+  content: "";
+  width: 200px;
+  height: 200px;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(182deg, #9356dc 0%, #ff79da 100%);
+  box-shadow: 3px 4px 15px 0px rgba(238, 3, 113, 0.2);
+  box-shadow: 0px 4px 15px 0px rgba(96, 5, 92, 0.9);
+  border-radius: 49%;
+  animation: spiner 3s infinite ease-in-out alternate;
+}
+.loader .name {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  margin-left: -10px;
+  gap: 10px;
+  color: #9356dc;
+  z-index: 3;
+}
+.loader .name p {
+  display: inline-block;
+  animation-duration: 1s;
+  animation: letter 3s infinite ease-in-out alternate;
+  animation-fill-mode: forwards;
+}
+@keyframes load {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes spiner {
+  0% {
+    transform: rotate(0deg) scale(0.5);
+  }
+  100% {
+    transform: rotate(360deg) scale(1);
+  }
+}
+@keyframes letter {
+  0% {
+    transform: scale(0.1);
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) scale(2);
+  }
+}
+
 body {
   margin: 0;
   font-family: roboto;
