--- a/menu/sass/menu.css
+++ b/menu/sass/menu.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @keyframes iconer {
   0% {
     transform: scale(1);
@@ -249,7 +248,6 @@ body h2 {
   border-radius: 1.5625rem;
   background: var(--button-gradient, linear-gradient(175deg, #9356dc 0%, #ff79da 100%));
   margin-top: 1.7rem;
-  /* Shadow/Button */
   box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.6);
   color: var(--white, #fff);
   text-align: center;
@@ -302,7 +300,6 @@ body h2 {
   border-radius: 1.25rem;
   background: var(--background, #f6f6f6);
   gap: 1.67rem;
-  /* Shadow/Instructions */
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.6);
   transition-duration: 0.5s;
   box-sizing: border-box;
@@ -357,7 +354,7 @@ body h2 {
   opacity: 0;
   transform: scale(1.5);
   background-clip: text;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Ombre du texte (ombrage de lumière) */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   -webkit-background-clip: text;
   -webkit-text-fill-color: white;
 }
@@ -475,7 +472,6 @@ footer a {
     border-radius: 1.25rem;
     background: var(--background, #f6f6f6);
     gap: 1.67rem;
-    /* Shadow/Instructions */
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.6);
     transition-duration: 0.5s;
     box-sizing: border-box;
@@ -530,7 +526,7 @@ footer a {
     opacity: 0;
     transform: scale(1.5);
     background-clip: text;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Ombre du texte (ombrage de lumière) */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     -webkit-background-clip: text;
     -webkit-text-fill-color: white;
   }
