--- a/menu/sass/menu.css
+++ b/menu/sass/menu.css
@@ -435,125 +435,7 @@ footer a {
   transition-duration: 0.5s;
 }
 
-@media only screen and (max-width: 375px) {
-  .entree {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-items: center;
-    gap: 0.75rem;
-  }
-  .entree p {
-    margin-right: 1rem;
-    text-align: left;
-    margin-top: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 100%;
-  }
-  .entree h3 {
-    margin-bottom: 0;
-    text-align: left;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 100%;
-  }
-  .entree .bouton_menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-items: center;
-    width: 100%;
-    height: 4.5rem;
-    border-radius: 1.25rem;
-    background: var(--background, #f6f6f6);
-    gap: 1.67rem;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.6);
-    transition-duration: 0.5s;
-    box-sizing: border-box;
-    border: 0;
-    background-color: white;
-    margin-bottom: 0.75rem;
-    justify-content: space-between;
-    border-block-color: transparent;
-    animation: cascade 1s 3s ease-in-out both;
-    max-width: none;
-    box-sizing: content-box;
-  }
-  .entree .bouton_menu:hover {
-    background: var(--background, #f2eafb);
-    box-shadow: 0px 4px 15px 0px rgba(94, 5, 86, 0.5);
-    transform: scale(0.98);
-  }
-  .entree .bouton_menu .detail {
-    padding-left: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.31rem;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-  .entree .bouton_menu .anim {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    justify-content: flex-end;
-  }
-  .entree .bouton_menu .anim .slide {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 4.5rem;
-    transform: scale(1.02);
-    opacity: 0;
-    width: 0;
-    background-color: #99e2d0;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 0 1.25rem 1.25rem 0;
-  }
-  .entree .bouton_menu .anim .slide .fa-circle-check {
-    opacity: 0;
-    transform: scale(1.5);
-    background-clip: text;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: white;
-  }
-  .entree .bouton_menu .anim .prix {
-    display: flex;
-    flex-direction: column;
-    gap: 0.31rem;
-    animation-fill-mode: forwards;
-  }
-  .entree .bouton_menu .anim .prix p {
-    margin-top: 10px;
-    font-weight: bold;
-  }
-  .entree .bouton_menu:active .slide {
-    cursor: pointer;
-    animation: slider 0.2s ease-in-out both;
-  }
-  .entree .bouton_menu:active .fa-circle-check {
-    animation: iconer 0.2s ease-in-out both;
-    transition-duration: 0.2s;
-  }
-  .entree .bouton_menu:active .prix {
-    animation: prixer 0.5s cubic-bezier(0.25, 0.1, 0.48, 1) forwards;
-  }
-  .entree .bouton_menu:active p {
-    width: 100%;
-  }
+@media only screen and (max-width: 374px) {
   .entree #b1:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
@@ -599,10 +481,86 @@ footer a {
     transition-duration: 0.5s;
     transition-delay: 0.2s;
   }
+  .entree #b10:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b11:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b12:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b13:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b14:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b15:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b16:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b17:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
 }
-@media only screen and (min-width:375px) and (max-width: 400px) {
+@media only screen and (min-width:374px) and (max-width: 400px) {
   .restaurants .carte {
     flex-basis: 100%;
+  }
+  .entree #b1:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b2:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b3:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b4:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b5:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b6:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b7:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b8:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
+  }
+  .entree #b9:active .detail p {
+    width: calc(100% - 40px);
+    transition-duration: 0.5s;
   }
 }
 @media only screen and (min-width:400px) and (max-width:768px) {
