--- a/accueil/sass/accueil.css
+++ b/accueil/sass/accueil.css
@@ -583,6 +583,7 @@ body main h1.nav_titre {
 }
 .navigation .navigation__page .navigation__bouton {
   max-width: 20.15rem;
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: center;
