--- a/menu/sass/menu.css
+++ b/menu/sass/menu.css
@@ -311,6 +311,7 @@ body h2 {
   animation: cascade 1s 3s ease-in-out both;
   max-width: none;
   box-sizing: content-box;
+  cursor: pointer;
 }
 .entree .bouton_menu:hover {
   background: var(--background, #f2eafb);
