--- a/menu/sass/menu.css
+++ b/menu/sass/menu.css
@@ -224,7 +224,7 @@ body h2 {
 
 .menu {
   display: grid;
-  grid-template-columns: 88%;
+  grid-template-columns: 95%;
   justify-content: center;
 }
 .menu h2 {
@@ -273,13 +273,13 @@ body h2 {
   gap: 0.75rem;
 }
 .entree p {
-  margin-right: 1rem;
   text-align: left;
   margin-top: 0;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   width: 100%;
+  font-size: 0.94rem;
 }
 .entree h3 {
   margin-bottom: 0;
@@ -288,6 +288,7 @@ body h2 {
   white-space: nowrap;
   text-overflow: ellipsis;
   width: 100%;
+  font-size: 1.125rem;
 }
 .entree .bouton_menu {
   display: flex;
@@ -299,7 +300,6 @@ body h2 {
   height: 4.5rem;
   border-radius: 1.25rem;
   background: var(--background, #f6f6f6);
-  gap: 1.67rem;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.6);
   transition-duration: 0.5s;
   box-sizing: border-box;
@@ -312,6 +312,7 @@ body h2 {
   max-width: none;
   box-sizing: content-box;
   cursor: pointer;
+  position: relative;
 }
 .entree .bouton_menu:hover {
   background: var(--background, #f2eafb);
@@ -345,7 +346,6 @@ body h2 {
   opacity: 0;
   width: 0;
   background-color: #99e2d0;
-  height: 100%;
   position: absolute;
   top: 0;
   right: 0;
@@ -364,6 +364,7 @@ body h2 {
   flex-direction: column;
   gap: 0.31rem;
   animation-fill-mode: forwards;
+  margin-right: 0.5rem;
 }
 .entree .bouton_menu .anim .prix p {
   margin-top: 10px;
@@ -382,6 +383,9 @@ body h2 {
 }
 .entree .bouton_menu:active p {
   width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .commande {
@@ -437,15 +441,14 @@ footer a {
 }
 
 @media only screen and (max-width: 374px) {
-  .entree #b1:active .detail p {
-    width: calc(100% - 60px);
-    transition-duration: 0.5s;
-    transition-delay: 0.2s;
-  }
   .entree #b2:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
     transition-delay: 0.2s;
+  }
+  .entree #b2:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
   }
   .entree #b3:active .detail p {
     width: calc(100% - 60px);
@@ -457,25 +460,27 @@ footer a {
     transition-duration: 0.5s;
     transition-delay: 0.2s;
   }
+  .entree #b4:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
   .entree #b5:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
     transition-delay: 0.2s;
   }
-  .entree #b6:active .detail p {
-    width: calc(100% - 60px);
+  .entree #b5:active .detail h3 {
+    width: calc(100% - 30px);
     transition-duration: 0.5s;
-    transition-delay: 0.2s;
-  }
-  .entree #b7:active .detail p {
-    width: calc(100% - 60px);
-    transition-duration: 0.5s;
-    transition-delay: 0.2s;
   }
   .entree #b8:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
     transition-delay: 0.2s;
+  }
+  .entree #b8:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
   }
   .entree #b9:active .detail p {
     width: calc(100% - 60px);
@@ -497,27 +502,122 @@ footer a {
     transition-duration: 0.5s;
     transition-delay: 0.2s;
   }
+  .entree #b12:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
   .entree #b13:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
     transition-delay: 0.2s;
+  }
+  .entree #b13:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
   }
   .entree #b14:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
     transition-delay: 0.2s;
   }
-  .entree #b15:active .detail p {
-    width: calc(100% - 60px);
+  .entree #b14:active .detail h3 {
+    width: calc(100% - 30px);
     transition-duration: 0.5s;
-    transition-delay: 0.2s;
   }
   .entree #b16:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
     transition-delay: 0.2s;
   }
+  .entree #b16:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
   .entree #b17:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b17:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b18:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b18:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b19:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b20:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b21:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b21:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b23:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b23:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b24:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b25:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b25:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b26:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b28:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b28:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b30:active .detail p {
+    width: calc(100% - 60px);
+    transition-duration: 0.5s;
+    transition-delay: 0.2s;
+  }
+  .entree #b30:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b32:active .detail h3 {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b33:active .detail p {
     width: calc(100% - 60px);
     transition-duration: 0.5s;
     transition-delay: 0.2s;
@@ -527,40 +627,36 @@ footer a {
   .restaurants .carte {
     flex-basis: 100%;
   }
-  .entree #b1:active .detail p {
-    width: calc(100% - 40px);
-    transition-duration: 0.5s;
-  }
-  .entree #b2:active .detail p {
-    width: calc(100% - 40px);
-    transition-duration: 0.5s;
-  }
   .entree #b3:active .detail p {
-    width: calc(100% - 40px);
+    width: calc(100% - 20px);
     transition-duration: 0.5s;
   }
   .entree #b4:active .detail p {
-    width: calc(100% - 40px);
+    width: calc(100% - 30px);
     transition-duration: 0.5s;
   }
   .entree #b5:active .detail p {
-    width: calc(100% - 40px);
-    transition-duration: 0.5s;
-  }
-  .entree #b6:active .detail p {
-    width: calc(100% - 40px);
-    transition-duration: 0.5s;
-  }
-  .entree #b7:active .detail p {
-    width: calc(100% - 40px);
-    transition-duration: 0.5s;
-  }
-  .entree #b8:active .detail p {
-    width: calc(100% - 40px);
+    width: calc(100% - 20px);
     transition-duration: 0.5s;
   }
   .entree #b9:active .detail p {
-    width: calc(100% - 40px);
+    width: calc(100% - 20px);
+    transition-duration: 0.5s;
+  }
+  .entree #b10:active .detail p {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b17:active .detail p {
+    width: calc(100% - 30px);
+    transition-duration: 0.5s;
+  }
+  .entree #b23:active .detail p {
+    width: calc(100% - 20px);
+    transition-duration: 0.5s;
+  }
+  .entree #b32:active h3 {
+    width: calc(100% - 20px);
     transition-duration: 0.5s;
   }
 }
