--- a/parcels/_mixins.scss
+++ b/parcels/_mixins.scss
@@ -96,7 +96,7 @@
   height: 4.5rem;
   border-radius: 1.25rem;
   background: var(--background, #f6f6f6);
-  gap: 1.67rem;
+  // gap: 1.67rem;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.6);
   transition-duration: 0.5s;
   box-sizing: border-box;
@@ -472,7 +472,7 @@
 }
 @mixin menu {
   display: grid;
-  grid-template-columns: 88%;
+  grid-template-columns: 95%;
   justify-content: center;
   h2 {
     @include police(roboto);
@@ -498,13 +498,14 @@
   gap: 0.75rem;
 
   p {
-    margin-right: 1rem;
+    // margin-right: 1rem;
     text-align: left;
     margin-top: 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 100%;
+    font-size: 0.94rem;
   }
   h3 {
     margin-bottom: 0;
@@ -513,6 +514,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 100%;
+    font-size: 1.125rem;
   }
   .bouton_menu {
     @include bouton;
@@ -524,6 +526,7 @@
     max-width: none;
     box-sizing: content-box;
     cursor: pointer;
+    position: relative;
 
     .detail {
       padding-left: 1rem;
@@ -545,7 +548,7 @@
         opacity: 0;
         width: 0;
         background-color: #99e2d0;
-        height: 100%;
+        // height: 100%;
         position: absolute;
         top: 0;
         right: 0;
@@ -566,7 +569,7 @@
         flex-direction: column;
         gap: 0.31rem;
         animation-fill-mode: forwards;
-
+        margin-right: 0.5rem;
         p {
           margin-top: 10px;
           font-weight: bold;
@@ -593,20 +596,31 @@
     }
     &:active p {
       width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
 }
 @mixin defil_text {
-  width: calc(100% - 40px);
+  width: calc(100% - 10px);
   transition-duration: 0.5s;
   // transition-delay: 0.2s;
 }
+@mixin defil2_text {
+  width: calc(100% - 20px);
+  transition-duration: 0.5s;
+}
 @mixin defil1_text {
+  width: calc(100% - 30px);
+  transition-duration: 0.5s;
+  // transition-delay: 0.2s;
+}
+@mixin defil3_text {
   width: calc(100% - 60px);
   transition-duration: 0.5s;
   transition-delay: 0.2s;
 }
-
 @keyframes iconer {
   0% {
     transform: scale(1);
