--- a/accueil/sass/accueil.css
+++ b/accueil/sass/accueil.css
@@ -717,25 +717,16 @@ img {
 .coeur i {
   position: absolute;
 }
-.coeur .full {
-  -webkit-background-clip: text;
-          background-clip: text;
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 0.5s;
-}
-.coeur .full:hover {
-  cursor: pointer;
-  transition: 0.5s ease-in-out;
-  color: transparent;
-  opacity: 1;
-  background-clip: text;
+.coeur .full::before {
+  content: "\f004";
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(0, 0, 0, 0);
+  background-clip: text;
   background-image: linear-gradient(182deg, #9356dc 0%, #ff79da 100%);
+  opacity: 0;
+  transition: opacity 1s;
 }
-.coeur .full:hover:active {
-  transform: scale(1.8);
+.coeur .full:hover::before {
   opacity: 1;
 }
 
